--- a/views/club.hbs
+++ b/views/club.hbs
@@ -4,20 +4,35 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/club.css"
+    <link rel="stylesheet" href="/css/club.css">
     <title>{{clubName}}</title>
   </head>
   <body>
+    <div class="flex-container">
+      <form class="form-club" action="index.html" method="post">
+        <input type="text" name="" value="" id="search" align="middle">
+      </form>
+    </div>
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <div class="card">
-
+            <div class="card ind-card">
+              frtkjkhn
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card ind-card">
+              frtkjkhn
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card ind-card">
+              frtkjkhn
             </div>
           </div>
         </div>
-
       </div>
   </body>
+  <script type="text/javascript" src="/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="/js/club.js"></script>
 </html>
