--- a/views/cv.hbs
+++ b/views/cv.hbs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.gstatic.com/s/productsans/v5/HYvgU2fE2nRJvZ5JFAumwegdm0LZdjqr5-oayXSOefg.woff2" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="/css/cv.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -26,11 +26,15 @@
                   </div>
               </div>
               <div class="text">
-                  <span><h3>Overall Rating</h3></span>
+                  <span><h3>&nbsp;&nbsp;&nbsp; Overall Rating</h3></span>
                   <strong>-</strong>
               </div>
           </div>
-          <button id="submit" class="btn btn-primary submitButt">Submit</button>
+          <div class="comments" style="margin-top: 65px; margin-left: 100px;">
+            <h3 style="margin-bottom: 25px;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comments</h3>
+            <textarea rows="6" cols="30" placeholder="Add your comments here"></textarea>
+          </div>
+          <button id="submit" class="submitButt">Submit</button>
         </div>
         <div class="col-md-10 col-xs-10">
           <embed src="/api/getpdf/{{clubName}}/{{id}}#toolbar=0&navpanes=0&scrollbar=0&zoom=150" align="right" width="1300" height="980" id="pdf" type='application/pdf'>
