--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,14 +3,25 @@
   <head>
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet/less" type="text/css" href="styles.less" />
+<script src="less.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/main.scss">
     <title>One</title>
   </head>
   <!-- DO NOT CHANGE CODE ABOVE THIS-->
   <body>
-    <form>
-      <input type="text" name="" value="" id="clubName">
-    </form>
-    <button type="button" name="button" id="submit">Submit</button>
+    <div class="skewed-bg">
+    	<div class="content">
+    		<h1 class="title">mks</h1>
+    	</div>
+      <form>
+        <input type="text" name="" value="" id="clubName">
+      </form>
+      <button type="button" name="button" id="submit">Submit</button>
+    </div>
+    <footer class="footer">
+    </footer>
   </body>
   <!-- DO NOT CHANGE CODE BELOW THIS-->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
