--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,25 +3,35 @@
   <head>
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet/less" type="text/css" href="styles.less" />
-<script src="less.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/main.scss">
-    <title>One</title>
+    <link rel="stylesheet" href="/css/home.css">
+    <title>GetIntoClub</title>
   </head>
   <!-- DO NOT CHANGE CODE ABOVE THIS-->
   <body>
-    <div class="skewed-bg">
+    <div class="sec1">
+      <img src="https://raw.githubusercontent.com/Vishal17599/vishal/master/Untitled-1.png" width=400px; style="margin-top: 30px; margin-left: 30px;"></img>
+    </div>
+  	<div class="sec2">
+      <div class="cardForInput">
+        <form>
+            <input type="text" name="" value="" id="clubName" placeholder="Enter Club Name" autocomplete="off">
+            <input type="password" name="" value="" placeholder="Password">
+        </form>
+      <button type="button" name="button" id="submit">Submit</button>
+      </div>
+    </div>
+  	<div class="sec3" style="padding-top: 150px;">
+      <h4 style="position: absolute; right: 0; bottom: 0;">&copy; AppTeam</h4>
+    </div>
+    <!-- <div class="skewed-bg">
     	<div class="content">
     		<h1 class="title">mks</h1>
     	</div>
-      <form>
-        <input type="text" name="" value="" id="clubName">
-      </form>
-      <button type="button" name="button" id="submit">Submit</button>
+
     </div>
     <footer class="footer">
-    </footer>
+    </footer> -->
   </body>
   <!-- DO NOT CHANGE CODE BELOW THIS-->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
