--- a/views/cv.hbs
+++ b/views/cv.hbs
@@ -32,7 +32,7 @@
           </div>
           <div class="comments" style="margin-top: 65px; margin-left: 100px;">
             <h3 style="margin-bottom: 25px;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comments</h3>
-            <textarea rows="6" cols="30" placeholder="Add your comments here"></textarea>
+            <textarea rows="6" cols="30" placeholder="Add your comments here" id="comments"></textarea>
           </div>
           <button id="submit" class="submitButt">Submit</button>
         </div>
