--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,7 +16,7 @@
       <div class="cardForInput">
         <form>
             <input type="text" name="" value="" id="clubName" placeholder="Enter Club Name" autocomplete="off">
-            <input type="password" name="" value="" placeholder="Password">
+            <input type="password" name="" value="" id="pass" placeholder="Password">
         </form>
       <button type="button" name="button" id="submit">Submit</button>
       </div>
