FInal Ratings and Comments update

--- a/views/cv.hbs
+++ b/views/cv.hbs
@@ -27,12 +27,12 @@
               </div>
               <div class="text">
                   <span><h3>&nbsp;&nbsp;&nbsp; Overall Rating</h3></span>
-                  <strong>-</strong>
+                  <strong>{{rating}}</strong>
               </div>
           </div>
           <div class="comments" style="margin-top: 65px; margin-left: 100px;">
             <h3 style="margin-bottom: 25px;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comments</h3>
-            <textarea rows="6" cols="30" placeholder="Add your comments here" id="comments"></textarea>
+            <textarea rows="6" cols="30" placeholder="Add your comments here" id="comments">{{comments}}</textarea>
           </div>
           <button id="submit" class="submitButt">Submit</button>
         </div>
