--- a/views/css/cv.css
+++ b/views/css/cv.css
@@ -2,6 +2,14 @@
   margin-top: 400px;
 }
 
+.embed-responsive {
+    position: relative;
+    display: block;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
 h3 {
   font-family: 'Lato';
 }
@@ -17,17 +25,18 @@ textarea {
   border: 5px solid #f8f8f8;
   border-radius: 45px;
   background: #f8f8f8;
+  margin-top: 60px;
   /* padding-left: 70px; */
   padding-left: 40px;
   padding-right: 40px;
-  font-size: 19px;
+  font-size: 26px;
 }
 
 .submitButt {
   margin-top: 45px;
-  margin-left: 180px;
-  width: 120px;
-  height: 50px;
+  margin-left: 210px;
+  width: 170px;
+  height: 60px;
   background: white;
   color: black;
   font-size: 21px;
@@ -39,7 +48,7 @@ textarea {
 
 /*Slider Code*/
 .slider {
-  width: 320px;
+  width: 420px;
   margin-left: 100px;
   height: 2px;
   background: rgba(0, 0, 0, .2);
