--- a/views/cv.hbs
+++ b/views/cv.hbs
@@ -14,7 +14,7 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-2 col-xs-2 rate">
+        <div class="col-md-4 rate">
           <!-- <input type="range" min="1" max="10"> -->
           <h3 style="margin-left: 100px;"></h3>
           <div class="slider">
@@ -26,18 +26,19 @@
                   </div>
               </div>
               <div class="text">
-                  <span><h3>&nbsp;&nbsp;&nbsp; Overall Rating</h3></span>
+                  <span><h2>&nbsp;&nbsp;&nbsp; Overall Rating</h2></span>
                   <strong>{{rating}}</strong>
               </div>
           </div>
           <div class="comments" style="margin-top: 65px; margin-left: 100px;">
-            <h3 style="margin-bottom: 25px;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comments</h3>
-            <textarea rows="6" cols="30" placeholder="Add your comments here" id="comments">{{comments}}</textarea>
+            <h2 style="margin-bottom: 25px;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comments</h2>
+            <textarea rows="8" cols="35" placeholder="Add your comments here" id="comments">{{comments}}</textarea>
           </div>
           <button id="submit" class="submitButt">Submit</button>
         </div>
-        <div class="col-md-10 col-xs-10">
-          <embed src="/api/getpdf/{{clubName}}/{{id}}#toolbar=0&navpanes=0&scrollbar=0&zoom=150" align="right" width="1300" height="980" id="pdf" type='application/pdf'>
+        <div class="col-md-8 embed-responsive" style='padding-bottom:150%'>
+           <object data="/api/getpdf/{{clubName}}/{{id}}#toolbar=0&navpanes=0&scrollbar=0&zoom=160" type='application/pdf' width='80%' height='100%'></object>
+          <!-- <iframe src="/api/getpdf/{{clubName}}/{{id}}#toolbar=0&navpanes=0&scrollbar=0&zoom=150" align="right" width="1300" height="980" id="pdf" type='application/pdf'></iframe> -->
         </div>
       </div>
     </div>
@@ -46,4 +47,4 @@
     <script type="text/javascript" src="/js/cv.js"></script>
 </html>
 
-<!-- zoom=140&navpanes=0 -->
+<!-- src="/api/getpdf/{{clubName}}/{{id}}#toolbar=0&navpanes=0&scrollbar=0&zoom=150 "-->
